invisible font fix

--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -1,20 +1,25 @@
 @font-face {
   font-family: "Monthoers";
   src: url("../fonts/Monthoers.otf");
+  font-display: swap;
 }
 @font-face {
   font-family: "Vollkorn";
   src: url("../fonts/Vollkorn.ttf");
+  font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
   src: url("../fonts/Poppins/Poppins-Medium.ttf");
+  font-display: swap;
 }
 @font-face {
   font-family: "Poppins-Bold";
   src: url("../fonts/Poppins/Poppins-SemiBold.ttf");
+  font-display: swap;
 }
 @font-face {
   font-family: "Poppins-Light";
   src: url("../fonts/Poppins/Poppins-Light.ttf");
+  font-display: swap;
 }
